--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,11 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+div.main.calendar-container{
+  display: flex;
+  align-items: center;
+}
+
 .mat-mdc-checkbox.example-margin.mat-accent{
   margin-left: -10px;
 }
