--- a/src/styles.css
+++ b/src/styles.css
@@ -43,10 +43,14 @@ button.select-buttons.active {
   color: white;
 }
 
-mat-form-field.wider-input {
+mat-form-field.wider-input{
   width: 40%;
   min-width: 300px;
   max-width: 600px;
+}
+
+.clear-button {
+  margin-left: auto;
 }
 
 .meeting-form {
@@ -106,4 +110,27 @@ input{
 ul {
   list-style-type: none;
   margin-top: 4px;
+}
+
+.avatar-container.text-listcontainter.diplay-flex {
+  align-items: center;
+  display: flex;
+  background-color: gainsboro;
+  margin-left: -40px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  width: 40%;
+  min-width: 300px;
+  max-width: 600px;
+}
+
+.elements-in-list.margin-left {
+  margin-left: 5px;
+}
+
+
+.wider-element.wider-container.wider-box{
+  width: 40%;
+  min-width: 300px;
+  max-width: 600px;
 }
