--- a/src/styles.css
+++ b/src/styles.css
@@ -8,18 +8,18 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-div.main.calendar-container{
+div.main.calendar-container {
   display: flex;
   align-items: center;
 }
 
-.mat-mdc-checkbox.example-margin.mat-accent{
+.mat-mdc-checkbox.example-margin.mat-accent {
   margin-left: -10px;
 }
 
 .mat-mdc-text-field-wrapper.mdc-text-field {
   border-radius: 5px;
-  border:solid;
+  border: solid;
   border-color: gray;
   border-width: 1px;
 }
@@ -33,20 +33,8 @@ button.select-buttons.active {
   color: white;
 }
 
-
-
-/* .select-buttons:focus{
-    color: white !important;
-} */
-.mat-button-toggle-checked.mat-button-toggle-appearance-standard {
-  background-color: black;
-  color: white;
-}
-
-mat-form-field.wider-input{
-  width: 40%;
-  min-width: 300px;
-  max-width: 600px;
+.wider-input {
+  background-color: aliceblue;
 }
 
 .clear-button {
@@ -57,11 +45,11 @@ mat-form-field.wider-input{
   margin-left: 100px;
   padding: 20px;
 }
-/* 
-input{
-  border-radius: 100px!important;
-  border-style: solid;
-} */
+
+.side-menu {
+  margin-left: 50px;
+  padding: 20px;
+}
 
 .mat-stroked-button {
   border-radius: 4px;
@@ -69,42 +57,6 @@ input{
   background-color: transparent;
   padding: 8px 16px;
   font-size: 14px;
-}
-
-.example-label {
-  display: table-cell;
-  font-size: 14px;
-  margin-left: 8px;
-  min-width: 120px;
-}
-
-.example-button-row {
-  display: table-cell;
-  max-width: 600px;
-}
-
-.example-button-row .mat-mdc-button-base {
-  margin: 8px 8px 8px 0;
-}
-
-.example-flex-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.example-button-container {
-  display: flex;
-  justify-content: center;
-  width: 120px;
-}
-
-.example-section {
-  margin: 12px 0;
-}
-
-.example-margin {
-  margin: 0 12px;
 }
 
 ul {
@@ -119,18 +71,102 @@ ul {
   margin-left: -40px;
   margin-bottom: 10px;
   border-radius: 10px;
-  width: 40%;
+  width: 70%;
   min-width: 300px;
-  max-width: 600px;
+  max-width: 800px;
 }
 
 .elements-in-list.margin-left {
   margin-left: 5px;
 }
 
+.margin-left--30px {
+  margin-left: -30px;
+}
 
-.wider-element.wider-container.wider-box{
-  width: 40%;
+.margin-left--40px {
+  margin-left: -40px;
+}
+
+.margin-left-40 {
+  margin-left: 40%;
+}
+
+.margin-left-70 {
+  margin-left: 70%;
+}
+
+.margin-left-60 {
+  margin-left: 60%;
+}
+
+.margin-left-50 {
+  margin-left: 50%;
+}
+
+.margin-left-60 {
+  margin-left: 60%;
+}
+
+.wider-element.wider-container.wider-box {
+  width: 75%;
   min-width: 300px;
-  max-width: 600px;
+  max-width: 800px;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+}
+
+.flex-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.task-name {
+  margin-right: 10px;
+
+}
+
+.near-button-container {
+  display: flex;
+  gap: 0px;
+  margin-left: 0px;
+  margin-right: 4rem;
+}
+
+app-new-meeting {
+  flex: 6;
+}
+
+app-tasks {
+  flex: 4;
+}
+
+.separator {
+  width: 2px;
+  background-color: gainsboro;
+}
+
+.mat-mdc-form-field-focus-overlay .ng-star-inserted {
+  background-color: white;
+}
+
+.mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled.mdc-text-field--no-label {
+  background-color: white;
+}
+
+.mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled.mdc-text-field--no-label.mdc-text-field--disabled {
+  background-color: gainsboro;
+}
+
+.mdc-checkbox .mdc-checkbox__background {
+  border-color: black;
 }
