Act VII: Invates with search and Gests work, need some css improvement

--- a/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/src/app/new-meeting-page/new-meeting-page.component.html
@@ -1,5 +1,11 @@
 <div class="flex-container">
-    <app-new-meeting></app-new-meeting>
+    <div class="main-menu">
+        <app-new-meeting></app-new-meeting>
+    </div>
     <div class="separator"></div>
-    <app-tasks></app-tasks>
+    <div class="side-menu">
+        <app-tasks></app-tasks>
+        <app-invates></app-invates>
+    </div>
+
 </div>
