--- a/src/app/new-meeting-page/tasks/tasks.component.html
+++ b/src/app/new-meeting-page/tasks/tasks.component.html
@@ -1,4 +1,4 @@
-<div class="side-menu">
+<div class="">
       <div class="flex-box">
         <h3>
             Tasks
@@ -8,7 +8,7 @@
       </div>
       <div calass="div-list ">
         <ul>
-            <li *ngFor="let task of tasksList; let i = index" class="list-item margin-left--40px">
+            <li *ngFor="let task of tasksList; let i = index" class="list-item margin-left-minus-40px">
               <div class="flex-box">
                 <span class="task-name">{{ task }}</span>
                 <div class="near-button-container margin-left-50">
