--- a/src/styles.css
+++ b/src/styles.css
@@ -24,17 +24,16 @@ div.main.calendar-container {
   border-width: 1px;
 }
 
-.select-buttons {
-  margin: 15px;
-}
-
 button.select-buttons.active {
   background-color: black;
   color: white;
 }
 
 .wider-input {
-  background-color: aliceblue;
+  background-color: white;
+  height: 4rem;
+  width: 88%;
+
 }
 
 .clear-button {
@@ -47,8 +46,24 @@ button.select-buttons.active {
 }
 
 .side-menu {
-  margin-left: 50px;
+  margin-left: 40px;
   padding: 20px;
+  flex: 4;
+}
+
+.select-buttons {
+  margin-right: 15px;
+  height: 3rem !important;
+  margin-left: 0px;
+}
+
+.select-buttons-agenda {
+  margin: 15px;
+  height: 3rem !important;
+}
+
+.wider-input>.mat-mdc-text-field-wrapper>.mat-mdc-form-field-flex>.mat-mdc-form-field-infix {
+  padding-top: 10px;
 }
 
 .mat-stroked-button {
@@ -80,11 +95,11 @@ ul {
   margin-left: 5px;
 }
 
-.margin-left--30px {
+.margin-left-minus-30px {
   margin-left: -30px;
 }
 
-.margin-left--40px {
+.margin-left-minus-40px {
   margin-left: -40px;
 }
 
@@ -114,6 +129,18 @@ ul {
   max-width: 800px;
 }
 
+.wider-element.wider-container.wider-box.lower-input {
+  height: 4rem;
+}
+
+.mdc-text-field--no-label:not(.mdc-text-field--outlined):not(.mdc-text-field--textarea) .mat-mdc-form-field-infix {
+  padding-top: 10px;
+}
+
+.mat-mdc-icon-button.mat-mdc-button-base {
+  padding-top: 10px;
+}
+
 .flex-container {
   display: flex;
 }
@@ -128,6 +155,7 @@ ul {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  padding-right: 0px;
 }
 
 .task-name {
