--- a/src/app/new-meeting-page/invates/invates.component.html
+++ b/src/app/new-meeting-page/invates/invates.component.html
@@ -1,44 +1,19 @@
 <div>
     <div class="flex-box">
-        <h3>
-            Invates
-        </h3>
+        <h2>
+            Inviates
+        </h2>
     </div>
-    <div>
-        <mat-form-field class="wider-input">
-            <!-- <input matInput (input)="handleSerchInput($event)" placeholder="Search" /> -->
-            <input matInput [(ngModel)]="wanted" (input)="search()" placeholder="Search" />
-        </mat-form-field>
-
-        <ul>
-            <mat-checkbox (click)="hangleCheckekAll()" class="margin-left-minus-40px">
-                <span class="" > ALL </span>
-            </mat-checkbox>
-            <li *ngFor="let pop of searchedList; let i = index" class="list-item margin-left-minus-40px">
-                <div class="">
-                    <mat-checkbox [checked]="pop.invited" (click)="checkPerson(i)" class="margin-minus-10px">
-                        <span class=""> {{ pop.name }} </span>
-                        <span class=""> {{ pop.surname }} </span>
-                        <br>
-                        <span class=""> {{ pop.jobPosition }} </span>
-                    </mat-checkbox>
-                    <br>
-                </div>
-            </li>
-        </ul>
+    <div class="flex-container gap-1rem">
+        <mat-tab-group style="width: 26rem;">
+            <mat-tab label="Board">
+                <br>
+                <app-board></app-board>
+            </mat-tab>
+            <mat-tab label="Gests">
+                <br>
+                <app-guests></app-guests>
+            </mat-tab>
+        </mat-tab-group>
     </div>
-    <div>
-        <ul>
-            <li *ngFor="let pop of gestsList; let i = index" class="list-item margin-left-minus-40px">
-                <div *ngIf="pop.invited" class="">
-                        <span class=""> {{ pop.name }} </span>
-                        <span class=""> {{ pop.surname }} </span>
-                        <span class=""> {{ pop.jobPosition }} </span>
-                        <br>
-                        <br>
-                </div>
-            </li>
-        </ul>
-    </div>
-    <button (click)="print()">PRINT</button>
 </div>
