--- a/src/app/new-meeting-page/tasks/tasks.component.html
+++ b/src/app/new-meeting-page/tasks/tasks.component.html
@@ -1,28 +1,27 @@
-<div class="">
-      <div class="flex-box">
-        <h3>
-            Tasks
-        </h3>
-    <button mat-stroked-button class="near-button-container "
-        (click)="addTask()">New Task</button>
-      </div>
-      <div calass="div-list ">
-        <ul>
-            <li *ngFor="let task of tasksList; let i = index" class="list-item margin-left-minus-40px">
-              <div class="flex-box">
-                <span class="task-name">{{ task }}</span>
-                <div class="near-button-container margin-left-50">
-                  <button mat-icon-button matSuffix class="addTask()">
-                    <mat-icon>edit_note</mat-icon>
-                  </button>
-                  <button mat-icon-button matSuffix (click)="clearInput(i)">
-                    <mat-icon>clear</mat-icon>
-                  </button>
-                </div>
-              </div>
-            </li>
-          </ul>
-          
-          
-      </div>
+<div class="" style="display: block; max-width: 500px;">
+  <div class="flex-box">
+    <h2>
+      Tasks
+    </h2>
+    <button mat-stroked-button class="near-button-container " (click)="addTask()">New Task</button>
+  </div>
+  <div class="div-list">
+    <ul>
+      <li *ngFor="let task of tasksList; let i = index" class="list-item margin-left-minus-40px">
+        <div class="flex-box">
+          <span class="task-name">{{ task }}</span>
+          <div class="near-button-container margin-left-50">
+            <button mat-icon-button matSuffix class="addTask()">
+              <mat-icon>edit_note</mat-icon>
+            </button>
+            <button mat-icon-button matSuffix (click)="clearInput(i)">
+              <mat-icon>clear</mat-icon>
+            </button>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+
+  </div>
 </div>
