--- a/src/app/shared/datepicker/datepicker.component.css
+++ b/src/app/shared/datepicker/datepicker.component.css
@@ -1,6 +1,7 @@
 
 
 .mat-mdc-text-field-wrapper.mdc-text-field .mdc-text-field--filled .mdc-text-field--no-label{
+    height: 3rem!important;
     width: 85px!important;
 }
 
@@ -15,4 +16,8 @@
 
 .input-time{
     padding: 0px;
+}
+
+::ng-deep .mat-mdc-icon-button.mat-mdc-button-base{
+    padding-top: 2px!important;
 }
