--- a/src/app/shared/datepicker/datepicker.component.html
+++ b/src/app/shared/datepicker/datepicker.component.html
@@ -1,7 +1,7 @@
 <div class="calendar-container">
-  <mat-form-field class="calendar-field">
-    <input matInput [matDatepicker]="picker" placeholder="Data" (dateChange)="onDateChange($event.value)">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
+  <mat-form-field class="calendar-field" style="height: 4rem;">
+    <input matInput class="wider-input" [matDatepicker]="picker" placeholder="Data" (dateChange)="onDateChange($event.value)">
+    <mat-datepicker-toggle style="margin-top: -10px;" matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker style="margin-top: -10px;" #picker></mat-datepicker>
   </mat-form-field>
 </div>
