--- a/src/app/shared/timepicker/timepicker.component.css
+++ b/src/app/shared/timepicker/timepicker.component.css
@@ -11,8 +11,13 @@
 .custom-time-input{
     margin-left: 10px;
     width: 85px;
+    height: 4rem;
 }
 
 .input-time{
     padding: 0px;
+}
+
+::ng-deep .mat-mdc-form-field-infix{
+    margin-top: -4px;
 }
