--- a/src/styles.css
+++ b/src/styles.css
@@ -144,10 +144,16 @@ ul {
 .flex-container {
   display: flex;
 }
-
+.gap-1rem{
+  gap: 1rem;
+}
 .list-item {
   display: flex;
   align-items: center;
+}
+
+.mat-mdc-tab-header{
+  display: ruby!important;
 }
 
 .flex-box {
