--- a/src/app/new-meeting-page/invates/invates.component.html
+++ b/src/app/new-meeting-page/invates/invates.component.html
@@ -1,19 +1,18 @@
 <div>
     <div class="flex-box">
-        <h2>
-            Inviates
-        </h2>
+        <h2>Inviates</h2>
     </div>
     <div class="flex-container gap-1rem">
-        <mat-tab-group style="width: 26rem;">
+        <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
             <mat-tab label="Board">
+                <div class="separator-forInvates"></div>
                 <br>
                 <app-board></app-board>
             </mat-tab>
             <mat-tab label="Gests">
+                <div class="separator-forInvates"></div>
                 <br>
                 <app-guests></app-guests>
             </mat-tab>
         </mat-tab-group>
     </div>
-</div>
