--- a/src/app/new-meeting-page/new-meeting/new-meeting.component.css
+++ b/src/app/new-meeting-page/new-meeting/new-meeting.component.css
@@ -1,8 +1,9 @@
 
-.mat-mdc-form-field-icon-suffix.ng-star-inserted{
+::ng-deep .mat-mdc-form-field-icon-suffix.ng-star-inserted{
     margin-bottom: 5px;
+    margin-top: 0px!important;
 }
 
 .mdc-icon-button.mat-mdc-icon-button.mat-unthemed.mat-mdc-button-base{
-    margin-top: -10px;
+    margin-top: 0px;
 }
