--- a/src/app/new-meeting-page/tasks/tasks.component.html
+++ b/src/app/new-meeting-page/tasks/tasks.component.html
@@ -3,15 +3,15 @@
     <h2>
       Tasks
     </h2>
-    <button mat-stroked-button class="near-button-container " (click)="addTask()">New Task</button>
+    <button mat-stroked-button class="near-button-container gap-0" (click)="addTask()">New Task</button>
   </div>
   <div class="div-list">
     <ul>
       <li *ngFor="let task of tasksList; let i = index" class="list-item margin-left-minus-40px">
         <div class="flex-box">
           <span class="task-name">{{ task }}</span>
-          <div class="near-button-container margin-left-50">
-            <button mat-icon-button matSuffix class="addTask()">
+          <div class="near-button-container gap-0 margin-left-50prc">
+            <button mat-icon-button matSuffix (click)="editTask()">
               <mat-icon>edit_note</mat-icon>
             </button>
             <button mat-icon-button matSuffix (click)="clearInput(i)">
