--- a/src/styles.css
+++ b/src/styles.css
@@ -103,24 +103,29 @@ ul {
   margin-left: -40px;
 }
 
-.margin-left-40 {
+.margin-left-40prc {
   margin-left: 40%;
 }
 
-.margin-left-70 {
+.margin-left-70prc {
   margin-left: 70%;
 }
 
-.margin-left-60 {
-  margin-left: 60%;
-}
 
-.margin-left-50 {
+.margin-left-50prc {
   margin-left: 50%;
 }
 
-.margin-left-60 {
+.margin-left-60prc {
   margin-left: 60%;
+}
+
+.padding-left-30px{
+  padding-left: 30px;
+}
+
+.margin-top-10px{
+  margin-top: 10px;
 }
 
 .wider-element.wider-container.wider-box {
@@ -134,11 +139,7 @@ ul {
 }
 
 .mdc-text-field--no-label:not(.mdc-text-field--outlined):not(.mdc-text-field--textarea) .mat-mdc-form-field-infix {
-  padding-top: 10px;
-}
-
-.mat-mdc-icon-button.mat-mdc-button-base {
-  padding-top: 10px;
+  padding-top: 14px;
 }
 
 .flex-container {
@@ -171,9 +172,16 @@ ul {
 
 .near-button-container {
   display: flex;
-  gap: 0px;
   margin-left: 0px;
   margin-right: 4rem;
+}
+
+.gap-0{
+  gap: 0px;
+}
+
+.gap-20px{
+  gap: 20px;
 }
 
 app-new-meeting {
@@ -184,9 +192,36 @@ app-tasks {
   flex: 4;
 }
 
-.separator {
+.separator-vertical {
   width: 2px;
   background-color: gainsboro;
+}
+
+.separator-30rem-width {
+  width: 30rem;
+  background-color: gainsboro;
+  height: 2px;
+  margin-left: -30px;
+  margin-bottom: 15px;
+}
+.separator-25rem-width {
+  width: 25.4rem;
+  background-color: gainsboro;
+  height: 2px;
+  margin-left: -30px;
+  margin-bottom: 15px;
+}
+.separator-forInvates {
+  width: 26rem;
+  background-color: gainsboro;
+  height: 3px;
+  margin-top: -1px;
+}
+
+
+.separator-horizontal{
+  background-color: gainsboro;
+  height: 2px;
 }
 
 .mat-mdc-form-field-focus-overlay .ng-star-inserted {
