--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 html,
 body {
   height: 100%;
-}
-
-body {
+  font-family: 'Roboto', sans-serif;
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 div.main.calendar-container {
@@ -13,7 +12,7 @@ div.main.calendar-container {
   align-items: center;
 }
 
-.mat-mdc-checkbox.example-margin.mat-accent {
+.mat-mdc-checkbox.minus-10-margin.mat-accent {
   margin-left: -10px;
 }
 
@@ -33,11 +32,6 @@ button.select-buttons.active {
   background-color: white;
   height: 4rem;
   width: 88%;
-
-}
-
-.clear-button {
-  margin-left: auto;
 }
 
 .meeting-form {
@@ -62,7 +56,7 @@ button.select-buttons.active {
   height: 3rem !important;
 }
 
-.wider-input>.mat-mdc-text-field-wrapper>.mat-mdc-form-field-flex>.mat-mdc-form-field-infix {
+.wider-input > .mat-mdc-text-field-wrapper > .mat-mdc-form-field-flex > .mat-mdc-form-field-infix {
   padding-top: 10px;
 }
 
@@ -77,22 +71,6 @@ button.select-buttons.active {
 ul {
   list-style-type: none;
   margin-top: 4px;
-}
-
-.avatar-container.text-listcontainter.diplay-flex {
-  align-items: center;
-  display: flex;
-  background-color: gainsboro;
-  margin-left: -40px;
-  margin-bottom: 10px;
-  border-radius: 10px;
-  width: 70%;
-  min-width: 300px;
-  max-width: 800px;
-}
-
-.elements-in-list.margin-left {
-  margin-left: 5px;
 }
 
 .margin-left-minus-30px {
@@ -111,7 +89,6 @@ ul {
   margin-left: 70%;
 }
 
-
 .margin-left-50prc {
   margin-left: 50%;
 }
@@ -120,11 +97,11 @@ ul {
   margin-left: 60%;
 }
 
-.padding-left-30px{
+.padding-left-30px {
   padding-left: 30px;
 }
 
-.margin-top-10px{
+.margin-top-10px {
   margin-top: 10px;
 }
 
@@ -145,16 +122,14 @@ ul {
 .flex-container {
   display: flex;
 }
-.gap-1rem{
-  gap: 1rem;
-}
+
 .list-item {
   display: flex;
   align-items: center;
 }
 
-.mat-mdc-tab-header{
-  display: ruby!important;
+.mat-mdc-tab-header {
+  display: ruby !important;
 }
 
 .flex-box {
@@ -167,7 +142,6 @@ ul {
 
 .task-name {
   margin-right: 10px;
-
 }
 
 .near-button-container {
@@ -176,11 +150,15 @@ ul {
   margin-right: 4rem;
 }
 
-.gap-0{
+.gap-0 {
   gap: 0px;
 }
 
-.gap-20px{
+.gap-1rem {
+  gap: 1rem;
+}
+
+.gap-20px {
   gap: 20px;
 }
 
@@ -197,13 +175,6 @@ app-tasks {
   background-color: gainsboro;
 }
 
-.separator-30rem-width {
-  width: 30rem;
-  background-color: gainsboro;
-  height: 2px;
-  margin-left: -30px;
-  margin-bottom: 15px;
-}
 .separator-25rem-width {
   width: 25.4rem;
   background-color: gainsboro;
@@ -211,6 +182,7 @@ app-tasks {
   margin-left: -30px;
   margin-bottom: 15px;
 }
+
 .separator-forInvates {
   width: 26rem;
   background-color: gainsboro;
@@ -218,8 +190,7 @@ app-tasks {
   margin-top: -1px;
 }
 
-
-.separator-horizontal{
+.separator-horizontal {
   background-color: gainsboro;
   height: 2px;
 }
