Act XII: new page about, routings to pages, main menu or new meeting and about as childern of main menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-new-meeting-page></app-new-meeting-page>
+<div>
+  <h3 class="padding-20px">Board Meering App</h3>
+  <router-outlet></router-outlet>
+</div>
