--- a/src/app/new-meeting-page/tasks/tasks.component.html
+++ b/src/app/new-meeting-page/tasks/tasks.component.html
@@ -3,13 +3,13 @@
     <h2>
       Tasks
     </h2>
-    <button mat-stroked-button class="near-button-container gap-0" (click)="addTask()">New Task</button>
+    <button mat-stroked-button class="near-button-container gap-0" (click)="showOrHideTaskDialog('New Task', ['name'])">New Task</button>
   </div>
   <div class="div-list">
     <ul>
       <li *ngFor="let task of tasksList; let i = index" class="list-item margin-left-minus-40px">
         <div class="flex-box">
-          <span class="task-name">{{ task }}</span>
+          <span class="task-name">{{ task.name }}</span>
           <div class="near-button-container gap-0 margin-left-50prc">
             <button mat-icon-button matSuffix (click)="editTask()">
               <mat-icon>edit_note</mat-icon>
@@ -21,7 +21,6 @@
         </div>
       </li>
     </ul>
-
-
   </div>
+  <!-- <app-dialog-form *ngIf="showTaskMenu" [title]="dialogTitle" [fields]="['Task name: ']"></app-dialog-form> -->
 </div>
