Act XIV: add task dialog work, also little changes in timepicker look for better US AM/PM format disaply

--- a/src/app/new-meeting-page/new-meeting/new-meeting.component.css
+++ b/src/app/new-meeting-page/new-meeting/new-meeting.component.css
@@ -7,3 +7,7 @@
 .mdc-icon-button.mat-mdc-icon-button.mat-unthemed.mat-mdc-button-base{
     margin-top: 0px;
 }
+
+.button-X{
+    margin-top: -4px!important;
+}
