--- a/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -19,7 +19,7 @@
         <h3>Meeting name</h3>
         <mat-form-field class="wider-element wider-container wider-box lower-input">
           <input class="wider-input" [formControl]="meetingName" matInput placeholder="CompanyName Board meeting No.12">
-          <button mat-icon-button matSuffix (click)="clearInput()">
+          <button class="button-X" mat-icon-button matSuffix (click)="clearInput()">
             <mat-icon>clear</mat-icon>
           </button>
         </mat-form-field>
