--- a/src/app/dialog-form/dialog-form.component.html
+++ b/src/app/dialog-form/dialog-form.component.html
@@ -9,8 +9,9 @@
                 <input class="float-right" matInput type="text" [formControlName]="field">
             </div>
             <div class="flex-box">
-                <button class="select-buttons" mat-stroked-button [mat-dialog-close]="onSubmit()" type="submit">Submit</button>
-                <button class="select-buttons" mat-stroked-button mat-dialog-close type="submit">Close</button>
+                <!-- <button class="select-buttons" mat-stroked-button [mat-dialog-close]="onSubmit()" type="submit">Submit</button> -->
+                <button mat-stroked-button class="flex-container select-buttons" (click)="SaveDialog()" type="submit">Submit</button>
+                <button mat-stroked-button class="flex-container select-buttons" mat-dialog-close type="submit">Close</button>
             </div>
 
         </div>
