--- a/src/app/shared/timepicker/timepicker.component.css
+++ b/src/app/shared/timepicker/timepicker.component.css
@@ -1,8 +1,5 @@
 
 
-.mat-mdc-text-field-wrapper.mdc-text-field .mdc-text-field--filled .mdc-text-field--no-label{
-    width: 85px!important;
-}
 
 .mat-mdc-input-element.input-time {
     text-align: center;
@@ -10,7 +7,7 @@
 
 .custom-time-input{
     margin-left: 10px;
-    width: 85px;
+    width: 8rem;
     height: 4rem;
 }
 
@@ -19,5 +16,5 @@
 }
 
 ::ng-deep .mat-mdc-form-field-infix{
-    margin-top: -4px;
+    margin-top: -6px;
 }
