--- a/src/app/shared/timepicker/timepicker.component.html
+++ b/src/app/shared/timepicker/timepicker.component.html
@@ -1,3 +1,3 @@
 <mat-form-field class="custom-time-input">
-    <input matInput class="input-time" type="time" placeholder="end time" (change)="timeChange($event)">
+    <input #inputTime matInput class="input-time" type="time" placeholder="end time" (change)="timeChange($event)">
 </mat-form-field>
