--- a/src/app/shared/timepicker/timepicker.component.css
+++ b/src/app/shared/timepicker/timepicker.component.css
@@ -7,12 +7,12 @@
 
 .custom-time-input{
     margin-left: 10px;
-    width: 8rem;
+    width: 6rem;
     height: 4rem;
 }
-
-.input-time{
-    padding: 0px;
+::ng-deep .custom-time-input > .mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled.mdc-text-field--no-label{
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 ::ng-deep .mat-mdc-form-field-infix{
