--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@ body {
   margin: 0;
 }
 
+.avatar-container{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
 
 div.main.calendar-container {
