Act XXI_v2: rename correction

--- a/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/src/app/new-meeting-page/new-meeting-page.component.html
@@ -15,6 +15,6 @@
     <div class="separator-vertical"></div>
     <div class="side-menu">
         <app-tasks (tasksListOutput)="saveTasksList($event)"></app-tasks>
-        <app-invates></app-invates>
+        <app-invites></app-invites>
     </div>
 </div>
