--- a/src/app/new-meeting-page/invates/invites.component.html
+++ b/src/app/new-meeting-page/invates/invites.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="flex-box">
-        <h2>Inviates</h2>
+        <h2>Invites</h2>
     </div>
     <div class="flex-container gap-1rem">
         <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
