Act XXII: first php backend elements work and save base data to database

--- a/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/src/app/new-meeting-page/new-meeting-page.component.html
@@ -3,7 +3,7 @@
         <button mat-icon-button matSuffix routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
     <div class="near-button-container gap-20px">
-        <button mat-stroked-button (click)="saveDraft()">Save as draft</button>
+        <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button>
         <button mat-stroked-button (click)="saveAndPublish()" [disabled]="!formNotReady()">Save & Publish</button>
     </div>
 </div>
